--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "emailjs": "^4.0.3",
     "emailjs-com": "^3.2.0",
     "moment": "^2.30.1",
+    "notistack": "^3.0.1",
     "postcss": "^8.4.45",
     "react": "^18.3.1",
     "react-calendar": "^5.0.0",
