--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "socket.io-client": "^4.7.5",
     "sweetalert2": "^11.14.0",
     "tailwindcss": "^3.4.10",
+    "validator": "^13.12.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
