--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dayjs": "^1.11.13",
     "emailjs": "^4.0.3",
     "emailjs-com": "^3.2.0",
+    "file-saver": "^2.0.5",
     "moment": "^2.30.1",
     "notistack": "^3.0.1",
     "postcss": "^8.4.45",
